tests/errors/return-borrow.ari
fn leak(value: ref i64) -> ref i64 {
  return value;
}

fn main() -> i64 {
  return 0;
}
